// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkText should ignore weight prop if deprecated \`emphasize\` prop is being used 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "sans-serif",
        "fontSize": 30,
        "fontWeight": "400",
        "letterSpacing": -0.8,
      },
      Object {
        "fontFamily": "sans-serif-medium",
      },
    ]
  }
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</Text>
`;

exports[`Android BpkText should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "sans-serif",
        "fontSize": 16,
        "fontWeight": "400",
        "letterSpacing": -0.2,
      },
      Object {},
    ]
  }
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</Text>
`;

exports[`Android BpkText should render correctly with deprecated \`emphasize\` prop 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "sans-serif",
        "fontSize": 16,
        "fontWeight": "400",
        "letterSpacing": -0.2,
      },
      Object {
        "fontFamily": "sans-serif-medium",
      },
    ]
  }
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</Text>
`;

exports[`Android BpkText should render correctly with textStyle="base and weight="emphasized" 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "sans-serif",
        "fontSize": 16,
        "fontWeight": "400",
        "letterSpacing": -0.2,
      },
      Object {
        "fontFamily": "sans-serif-medium",
      },
    ]
  }
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</Text>
`;

exports[`Android BpkText should render correctly with textStyle="base" 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "sans-serif",
        "fontSize": 16,
        "fontWeight": "400",
        "letterSpacing": -0.2,
      },
      Object {},
    ]
  }
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</Text>
`;

exports[`Android BpkText should render correctly with textStyle="caps and weight="emphasized" 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "sans-serif",
        "fontSize": 10,
        "fontWeight": "400",
        "letterSpacing": 0.4,
      },
      Object {
        "fontFamily": "sans-serif-medium",
      },
    ]
  }
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</Text>
`;

exports[`Android BpkText should render correctly with textStyle="caps" 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "sans-serif",
        "fontSize": 10,
        "fontWeight": "400",
        "letterSpacing": 0.4,
      },
      Object {},
    ]
  }
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</Text>
`;

exports[`Android BpkText should render correctly with textStyle="lg and weight="emphasized" 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "sans-serif",
        "fontSize": 20,
        "fontWeight": "400",
        "letterSpacing": -0.4,
      },
      Object {
        "fontFamily": "sans-serif-medium",
      },
    ]
  }
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</Text>
`;

exports[`Android BpkText should render correctly with textStyle="lg" 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "sans-serif",
        "fontSize": 20,
        "fontWeight": "400",
        "letterSpacing": -0.4,
      },
      Object {},
    ]
  }
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</Text>
`;

exports[`Android BpkText should render correctly with textStyle="sm and weight="emphasized" 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "sans-serif",
        "fontSize": 14,
        "fontWeight": "400",
        "letterSpacing": 0,
      },
      Object {
        "fontFamily": "sans-serif-medium",
      },
    ]
  }
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</Text>
`;

exports[`Android BpkText should render correctly with textStyle="sm" 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "sans-serif",
        "fontSize": 14,
        "fontWeight": "400",
        "letterSpacing": 0,
      },
      Object {},
    ]
  }
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</Text>
`;

exports[`Android BpkText should render correctly with textStyle="xl and weight="emphasized" 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "sans-serif",
        "fontSize": 24,
        "fontWeight": "400",
        "letterSpacing": -0.6,
      },
      Object {
        "fontFamily": "sans-serif-medium",
      },
    ]
  }
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</Text>
`;

exports[`Android BpkText should render correctly with textStyle="xl and weight="heavy" 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "sans-serif",
        "fontSize": 24,
        "fontWeight": "400",
        "letterSpacing": -0.6,
      },
      Object {
        "fontFamily": "sans-serif-black",
      },
    ]
  }
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</Text>
`;

exports[`Android BpkText should render correctly with textStyle="xl" 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "sans-serif",
        "fontSize": 24,
        "fontWeight": "400",
        "letterSpacing": -0.6,
      },
      Object {},
    ]
  }
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</Text>
`;

exports[`Android BpkText should render correctly with textStyle="xs and weight="emphasized" 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "fontWeight": "400",
        "letterSpacing": 0,
      },
      Object {
        "fontFamily": "sans-serif-medium",
      },
    ]
  }
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</Text>
`;

exports[`Android BpkText should render correctly with textStyle="xs" 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "fontWeight": "400",
        "letterSpacing": 0,
      },
      Object {},
    ]
  }
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</Text>
`;

exports[`Android BpkText should render correctly with textStyle="xxl and weight="emphasized" 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "sans-serif",
        "fontSize": 30,
        "fontWeight": "400",
        "letterSpacing": -0.8,
      },
      Object {
        "fontFamily": "sans-serif-medium",
      },
    ]
  }
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</Text>
`;

exports[`Android BpkText should render correctly with textStyle="xxl and weight="heavy" 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "sans-serif",
        "fontSize": 30,
        "fontWeight": "400",
        "letterSpacing": -0.8,
      },
      Object {
        "fontFamily": "sans-serif-black",
      },
    ]
  }
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</Text>
`;

exports[`Android BpkText should render correctly with textStyle="xxl" 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "sans-serif",
        "fontSize": 30,
        "fontWeight": "400",
        "letterSpacing": -0.8,
      },
      Object {},
    ]
  }
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</Text>
`;

exports[`Android BpkText should render correctly with textStyle="xxxl and weight="emphasized" 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "sans-serif",
        "fontSize": 36,
        "fontWeight": "400",
        "letterSpacing": -1,
      },
      Object {
        "fontFamily": "sans-serif-medium",
      },
    ]
  }
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</Text>
`;

exports[`Android BpkText should render correctly with textStyle="xxxl and weight="heavy" 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "sans-serif",
        "fontSize": 36,
        "fontWeight": "400",
        "letterSpacing": -1,
      },
      Object {
        "fontFamily": "sans-serif-black",
      },
    ]
  }
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</Text>
`;

exports[`Android BpkText should render correctly with textStyle="xxxl" 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "sans-serif",
        "fontSize": 36,
        "fontWeight": "400",
        "letterSpacing": -1,
      },
      Object {},
    ]
  }
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</Text>
`;

exports[`Android BpkText should support overwriting styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "sans-serif",
        "fontSize": 16,
        "fontWeight": "400",
        "letterSpacing": -0.2,
      },
      Object {},
      Object {
        "color": "rgb(255, 84, 82)",
      },
    ]
  }
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</Text>
`;
